--- a/neurips_2019.sty
+++ b/neurips_2019.sty
@@ -55,7 +55,7 @@
 % handle tweaks for camera-ready copy vs. submission copy
 \if@preprint
   \newcommand{\@noticestring}{%
-  Proposal for Hilldale Undergraduate/Faculty Research Fellowship, UW-Madison, Spring 2020%
+  Proposal for Sophomore Research Fellowships, UW-Madison, Spring 2020%
   }
 \else
   \if@neuripsfinal
