Ver 2.4.1 - Fix typos, fit to the 5 pages

--- a/Deep_Learning-based_Approach_to_Prediction_of_Volcanic_Fallout_Spread.tex
+++ b/Deep_Learning-based_Approach_to_Prediction_of_Volcanic_Fallout_Spread.tex
@@ -128,10 +128,10 @@
       \centering
       \includegraphics[width = \linewidth]{ModelStructure.png}
       \caption{\textbf{Overview of the Research Goal}
-                This research aims to make a deep-learning model predicting volcanic fallout 
-                spread while accepting the weather maps (both surface and upper air) and eruption 
-                scale parameters (Plume height, Plume shape, Volume of Emitted Ash, and the location
-                of the mountain) as an input.
+                We will make a deep-learning model predicting volcanic ash spread while accepting 
+                the weather maps (both surface and upper air) and eruption scale parameters (Plume 
+                height, Plume shape, Volume of Emitted Ash, and the location of the mountain) as an 
+                input.
               }
       \vspace{-5mm}
       \label{fig1}
@@ -220,7 +220,6 @@
   The next step is to train the generator with a given input-output pair. As we have to fit the 
   conditional GAN based model and verify the result with various test cases, we expect to take two 
   additional months. For the last month of this research, we will write a report and create posters.
-
   The detailed timeline is in \textbf{Table \ref{table1}}.
 
   \fontsize{10pt}{10pt} \selectfont {
